# ml-playground

./: .gitattributes  .gitignore  .pdm.toml  README.md  pyproject.toml
baserun/: README.md
bentoml/: README.md  bentofile.yaml  save_model_to_bento.py  train_model.py
helm/milvus/: values.yaml
helm/postgresql/: Dockerfile  values.yaml
langchain/: README.md  build_index.py  evaluate.py  gui.py  search_index.py
ml_playground/ask_gpt/: cli.py  prompt.py  utils.py
ml_playground/gpt_api/: function_call.py
ml_playground/langchain/: README.md  build_index.py  evaluate.py  gui.py  search_index.py
ml_playground/langchain/utils/: db.py
ml_playground/utils/: io.py
notebooks/: binary_classification_imdb_tf.ipynb  cnn_cats_vs_dogs_tf.ipynb  cnn_cifar10_tf.ipynb  cnn_minist_tf.ipynb  cnn_mnist_pytorch.ipynb  cnn_mnist_tf.ipynb  cnn_mnist_tf_1.ipynb  deepdream_tf.ipynb  imdb_review.ipynb  interpreting_convnets.ipynb  keras_api.ipynb  linear_classifer_tf.ipynb  low_level_mnist_tf.ipynb  mlp_tf.ipynb  multi_classification_reuters_tf.ipynb  naive_mnist_tf.ipynb  neural_style_transfer_tf.ipynb  ngram_imdb_review.ipynb  pets_image_segmentation_tf.ipynb  pytorch_quick_start.ipynb  residual_tf.ipynb  rnn_timeseries_temperature.ipynb  scalar_regression_house_tf.ipynb  sequence_imdb_review.ipynb  sequence_to_sequence_translation.ipynb  transformer_imdb_review.ipynb  vae_mnist_tf.ipynb  xception_like_model_tf.ipynb
notebooks/audios/: spectrograms.ipynb
notebooks/dataset_survey/: deepchecks.ipynb  voxel51.ipynb  voxel51.py
notebooks/lang_chain/: agent.ipynb  chain.ipynb  evaluation.ipynb  memory.ipynb  prompt_parser.ipynb  qna.ipynb
notebooks/metrics/: BLEU.ipynb  ROUGE-N.ipynb  confusion_matrix.ipynb  precision_recall.ipynb  roc_curve.ipynb
notebooks/mlops/: keras_tuner.ipynb  shap_values.ipynb
notebooks/prompt_engineering /: l2-guidelines.ipynb  l3-iterative-prompt-development.ipynb  l4-summarizing.ipynb  l5-inferring.ipynb  l6-transforming.ipynb  l7-expanding.ipynb  l8-chatbot.ipynb
notebooks/stable_diffusion/: diffusion_utilities.py
notebooks/stable_diffusion/weights/: model_trained.pth
notebooks/vectors/: text_image_search_engine.ipynb
notebooks/vectors/audio_fingerprint/: audio_fingerprint.ipynb
notebooks/vectors/text_image_search_engine/: text_image_search_engine.ipynb
notebooks/vectors/text_video_retrieval_engine/: text_video_retrieval_engine.ipynb
scripts/: ask_gpt.py
scripts/data/: cats_vs_dogs.sh  glove.sh  gtzan.sh  imdb.sh  jena_climate.sh  kolena_doc.sh  msrvtt.sh  pets.sh  reverse_image_search.sh  spa_eng.sh
scripts/infra/: down.sh  up.sh  update.sh
tools/: package.json
verify/: pytorch.py
