[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yifan Wu", email = "tyivanwu@gmail.com"},
]
dependencies = [
    "tensorflow-macos>=2.10.0",
    "tensorflow-metal>=0.6.0",
    "jupyterlab>=3.5.0",
    "black>=22.10.0",
    "matplotlib>=3.6.2",
    "jupyterlab-code-formatter>=1.5.3",
    "isort>=5.10.1",
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "torchaudio>=0.13.0",
    "torchinfo>=1.7.1",
    "scikit-learn>=1.1.3",
    "seaborn>=0.12.2",
    "tensorboard>=2.10.1",
    "pydot>=1.4.2",
    "kaggle>=1.5.12",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
data_cats_vs_dogs = "./scripts/data/cats_vs_dogs.sh"
data_pets = "./scripts/data/pets.sh"
data_jena_climate = "./scripts/data/jena_climate.sh"
data_imdb = "./scripts/data/imdb.sh"
data_glove = "./scripts/data/glove.sh"
data_spa_eng = "./scripts/data/spa_eng.sh"
