[project]
name = "ml_playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Yifan Wu", email = "tyivanwu@gmail.com"},
]
dependencies = [
    "tensorflow-macos>=2.10.0",
    "tensorflow-metal>=0.6.0",
    "jupyterlab>=3.5.0",
    "black>=22.10.0",
    "matplotlib>=3.6.2",
    "jupyterlab-code-formatter>=1.5.3",
    "isort>=5.10.1",
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "torchaudio>=0.13.0",
    "torchinfo>=1.7.1",
    "scikit-learn>=1.2.2",
    "seaborn>=0.12.2",
    "tensorboard>=2.10.1",
    "pydot>=1.4.2",
    "kaggle>=1.5.12",
    "pymilvus>=2.2.4",
    "gradio>=3.20.0",
    "opencv-python>=4.7.0.72",
    "towhee>=1.1.0",
    "towhee.models>=0.9.0",
    "bentoml>=1.0.15",
    "pandas>=1.5.3",
    "openai>=0.27.8",
    "redlines>=0.2.2",
    "panel>=0.14.4",
    "langchain>=0.0.227",
    "chromadb>=0.3.21",
    "tiktoken>=0.3.3",
    "docarray>=0.35.0",
    "wikipedia>=1.4.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
data_cats_vs_dogs = "./scripts/data/cats_vs_dogs.sh"
data_pets = "./scripts/data/pets.sh"
data_jena_climate = "./scripts/data/jena_climate.sh"
data_imdb = "./scripts/data/imdb.sh"
data_glove = "./scripts/data/glove.sh"
data_spa_eng = "./scripts/data/spa_eng.sh"
data_reverse_image_search = "./scripts/data/reverse_image_search.sh"
data_msrvtt = "./scripts/data/msrvtt.sh"
data_gtzan = "./scripts/data/gtzan.sh"
data_kolena = "./scripts/data/kolena_doc.sh"
ask_gpt = "./scripts/ask_gpt.py"
langchain_cli = "langchain/search_index.py --memory"
langchain_gui = "panel serve langchain/gui.py --autoreload --show"
